add logo and executable build